--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -38,18 +38,18 @@ blur-background           = true;
 blur-background-frame     = false;
 blur-background-fixed     = false;
 blur-method = "dual_kawase";
-blur-strength = 18;
+blur-strength = 14;
 focus-exclude             = [
     "class_g = 'dmenu'",
     "QTILE_INTERNAL:32c = 1",
     "window_type = 'dock'",
-    "window_type = 'panel'",
+    # "window_type = 'panel'",
     "class_g = 'spectacle'",
     "class_g = 'mpv'",
     "class_g = 'vlc'",   
     "class_g = 'lattedock'",   
     "class_g = 'latte-dock'",   
-    # "class_g = 'Rofi'",
+    "class_g = 'Rofi'",
 	# "g:e:Galendae",
 	# "g:e:jgmenu"
     # "class_g = 'qutebrowser'",
@@ -65,7 +65,7 @@ focus-exclude             = [
 shadow = true;
 shadow-radius = 30;
 shadow-red = 0;
-shadow-offset-x = -15;
+shadow-offset-x = -25;
 shadow-offset-y = -10;
 shadow-opacity = 0.8;
 shadow-exclude = [
